--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		function loadUsers(){
 			var xhr = new XMLHttpRequest();
 
-			xhr.open('GET', 'https://api.github.com/users', true);
+			xhr.open('GET', '***** PLACE API LINK HERE *****', true);
 
 			xhr.onload = function() {
 				if(this.readyState == 4 && this.status == 200) {
